--- a/proyecto/css/nav.css
+++ b/proyecto/css/nav.css
@@ -7,17 +7,20 @@
     padding-left: 70px;
     transition: all .4s ease 0s;
     height: 100%
+
+
 }
 
 #sidebar-wrapper {
     margin-left: -150px;
     left: 70px;
-    width: 150px;
+    width: 160px;
     background: #222;
     position: fixed;
     height: 100%;
     z-index: 10000;
     transition: all .4s ease 0s;
+    overflow: scroll;
 }
 
 .sidebar-nav {
@@ -27,6 +30,8 @@
     list-style: none;
     margin: 0;
     padding: 0;
+
+
 }
 #page-content-wrapper {
     padding-left: 0;
